@@ -1,3 +1,8 @@
+2005-03-06  Jacob Smullyan  <smulloni@bunbury.smullyan.org>
+
+	* src/PyDO/drivers/psycopgconn.py (_converters): support for type
+	wrappers for postgresql.
+
 2005-02-22  Jacob Smullyan  <smulloni@bunbury.smullyan.org>
 
 	* src/PyDO/field.py: dropped "attrs" parameter for fields; to
